# agro_daemon

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README  README.md  TODO.md  URL.txt  alpine.Dockerfile  conanfile.py  docker-compose.yml  mingw64_profile
.github/workflows/: main.yml
cmake/: get_commit.cmake  install.cmake  package.cmake  scheme.hpp.in  version.hpp.in
db/: .gitignore  agro.db  agro_db.mwb  basic_data.sql  scheme.sql
src/: agro.cpp  agro.hpp  arguments.cpp  arguments.hpp  coap_engine.hpp  error.cpp  error.hpp  files.cmake  main.cpp  process_request.cpp  process_request.hpp  version.hpp.in  websocket.hpp
src/app/: app.cpp  app.hpp
src/app/message/: app.cpp  app.hpp  process.cpp
src/db/: app.cpp  db.cpp  db.hpp  device.cpp  helper.cpp  helper.hpp  image.cpp  notify.cpp  report.cpp  sensor.cpp  sqlite3.cpp  sqlite3.hpp  user.cpp
src/db/impl/: sqlite3_impl.hpp
src/device/: device.cpp  device.hpp  helper.cpp  helper.hpp  list.cpp  list.hpp  net.cpp  net.hpp  tree.cpp  tree.hpp  types.cpp  types.hpp
src/device/impl/: types_impl.hpp
src/device/message/: device.cpp  device.hpp  esp_reset_reason.cpp  esp_reset_reason.hpp  process.cpp  process.hpp
src/device/request/: ac_load.cpp  app.cpp  custom.cpp  in_progress.cpp  in_progress.hpp  job.cpp  net.cpp  ota.cpp  packet.cpp  request.cpp  request_list.hpp  system.cpp  time.cpp  types.hpp
src/device/resources/: app.cpp  board_config.cpp  config.cpp  full_config.cpp  info.cpp  init.cpp  init.hpp  job.cpp  ota.cpp  process.cpp  process.hpp  route.cpp  sensor_data.cpp  status.cpp  time.cpp  types.hpp
src/helper/: coap_helper.cpp  coap_helper.hpp  enum_ops.hpp  icmp.hpp  packed.h  sha256.cpp  sha256.hpp  time_helper.cpp  time_helper.hpp  utility.hpp
src/image/: esp_types.hpp  image.cpp  image.hpp
src/image/message/: image.cpp  image.hpp  process.cpp
src/image/message/impl/: image_impl.hpp
src/impl/: websocket_impl.hpp
src/instance/: agro.cpp  agro.hpp  app.cpp  authenticate.cpp  check_root.cpp  device.cpp  image.cpp  in_progress.cpp  notify.cpp  report.cpp  sensor.cpp  tree.cpp  user.cpp
src/instance/impl/: agro_impl.hpp
src/libs/csv/: CMakeLists.txt  csv.cpp  csv.hpp  csv_impl.hpp  fcsv.cpp  fcsv.hpp  fwriter.cpp  scsv.cpp  scsv.hpp  swriter.cpp  writer.cpp
src/libs/csv/examples/: CMakeLists.txt  file_csv.cpp  main_csv.cpp  string_csv.cpp
src/libs/csv/include/csv/: fwriter.hpp  swriter.hpp  writer.hpp  writer_impl.hpp
src/libs/html/: CMakeLists.txt  fwriter.cpp  swriter.cpp  writer.cpp
src/libs/html/examples/: file_html.cpp  main_html.cpp  string_html.cpp
src/libs/html/include/html/: fwriter.hpp  swriter.hpp  writer.hpp  writer_impl.hpp
src/libs/jason/: CMakeLists.txt  README.md  array.cpp  jason.cpp  object.cpp  types.cpp
src/libs/jason/examples/: api_test.cpp  array_doc.cpp  array_parse.cpp  basic_types.cpp  object_doc.cpp
src/libs/jason/include/: jason.hpp  literals.hpp  meta.hpp
src/libs/jason/include/impl/: array_impl.hpp  jason_impl.hpp  object_impl.hpp
src/libs/jason/tests/: CMakeLists.txt  tests.cpp
src/libs/smtp/: .gitignore  CMakeLists.txt  README.md  client.cpp  client.hpp  types.hpp
src/libs/smtp/examples/: smtp_client.cpp
src/libs/smtp/impl/: client_impl.hpp
src/libs/smtp/include/smtp/: client.hpp
src/libs/sqlite3/: CMakeLists.txt  sqlite3.cpp  sqlite3.hpp
src/libs/sqlite3/include/: sqlite3.hpp
src/libs/sqlite3/include/impl/: sqlite3_impl.hpp
src/message/: app.cpp  app.hpp  binary_data.hpp  commands.cpp  device.cpp  device.hpp  info.cpp  info.hpp  make.cpp  make.hpp  ota.cpp  ota.hpp  process.cpp  process.hpp  report.cpp  report.hpp  request.cpp  resource.hpp  resource_requests.hpp  types.hpp  user.cpp  user.hpp  user_types.hpp
src/message/impl/: make_impl.hpp  ota_impl.hpp  resource_impl.hpp  resource_request_impl.hpp
src/message/request/: ac_load.cpp  app.cpp  custom.cpp  in_progress.cpp  in_progress.hpp  job.cpp  ota.cpp  packet.cpp  request_list.hpp  system.cpp  time.cpp  types.hpp
src/notify/: alert.hpp  factory.cpp  factory.hpp  message.cpp  message.hpp  notify.cpp  notify.hpp  notify_request.cpp  notify_request.hpp
src/notify/impl/: notify_impl.hpp
src/notify/libs/: mail.cpp  mail.hpp  push_notify.cpp  push_notify.hpp  telegram_bot.cpp  telegram_bot.hpp
src/notify/libs/smtp/: README.md  client.cpp  client.hpp  types.hpp
src/notify/libs/smtp/example/: smtp_client.cpp
src/notify/libs/smtp/impl/: client_impl.hpp
src/notify/message/: make.cpp  make.hpp  make_json.cpp  notify.hpp  process.cpp  process.hpp
src/ota/: ota.cpp  ota.hpp
src/resources/: app.cpp  board_config.cpp  config.cpp  data_to_json.cpp  data_to_json.hpp  full_config.cpp  info.cpp  init.cpp  init.hpp  ota.cpp  process.cpp  process.hpp  route.cpp  sensor_data.cpp  status.cpp  time.cpp  types.hpp
src/sensor/: helper.cpp  helper.hpp  sensor_list.cpp  sensor_list.hpp  sensor_type.cpp  sensor_type.hpp  sensor_type_list.cpp  sensor_type_list.hpp  value.hpp
src/sensor/impl/: value_impl.hpp
src/sensor/message/: process.cpp  process.hpp  sensor.cpp  sensor.hpp
src/sensor/message/impl/: sensor_impl.hpp
src/user/: auth_message.cpp  auth_message.hpp  authenticate.hpp  authenticate_params.h  authorization.hpp  group.cpp  group.hpp  info.cpp  info.hpp  list.cpp  list.hpp  password.cpp  password.hpp  policy.cpp  policy.hpp  session_id.hpp  user.cpp  user.hpp
src/user/authorize/: policy.cpp  policy.hpp
src/user/authorize/impl/: policy_impl.hpp
src/user/impl/: authenticate_impl.hpp  session_id_impl.hpp
src/user/message/: auth_message.cpp  auth_message.hpp  make.hpp  user.cpp  user.hpp
src/user/message/impl/: make_impl.hpp
src/user/old/: user.hpp
src/websocket/: listener.hpp  load_certificate.cpp  load_certificate.hpp  share.hpp  types.hpp  websocket.hpp
src/websocket/impl/: authenticate_impl.hpp  binary_data_impl.hpp  read_impl.hpp  websocket_base_impl.hpp  websocket_impl.hpp
tools/: add_permission.cpp  add_user.cpp  add_user_group.cpp  create_self_signed_cert.sh  db_test.cpp  init_db.cpp  tools.cmake
